Events page -- Needs announcements section -- Mobile is broken Watch page -- PASSES -- Needs Zoom info /Homepage -- FIXED /Give page -- DONE

--- a/website/templates/events.html
+++ b/website/templates/events.html
@@ -2,27 +2,236 @@
 <html lang="en">
 <head>
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
-
-    <!--    <link rel="stylesheet" href="../static/css/homepage.css"> link css file-->
+    <link rel="stylesheet" href="../static/css/events.css">
     <meta charset="UTF-8">
     <title>Greater Bethlehem Temple Church</title>
 </head>
 <body>
     <header>
-        <a href="/"><img src="../static/images/logo.png" class="nav-logo"></a>
-        <input type = "checkbox" id = "nav-toggle" class = "nav-toggle">
-        <nav>
-            <ul>
-                <li><a href="#">Watch</a></li>
-                <li><a href="#">Give</a></li>
-                <li><a href="#">Connect</a></li>
-                <li><a href="#">Events</a></li>
-                <li><a href="#">About US</a></li>
-             </ul>
-        </nav>
-        <label for = "nav-toggle" class = "nav-toggle-label">
-        <span></span>
-        </label>
+        <div class="menu">
+            <a href="/" class="nav-logo-container"><img src="../static/images/white_logo.png" class="nav-logo"></a>
+            <input type = "checkbox" id = "nav-toggle" class = "nav-toggle">
+            <nav>
+                <ul>
+                    <li><a href="/watch">Watch</a></li>
+                    <li><a href="/give">Give</a></li>
+                    <li><a href="/connect">Connect</a></li>
+                    <li><a href="/events">Events</a></li>
+                    <li><a href="/about-us">About US</a></li>
+                </ul>
+            </nav>
+            <label for = "nav-toggle" class = "nav-toggle-label">
+            <span></span>
+            </label>
+        </div>
     </header>
+
+
+
+
+
+    <div class="banner">
+        <img src="../static/images/events.jpeg" class="event-img">
+        <div class="banner-h-container">
+            <h2>EVENTS</h2>
+        </div>
+        <div class="banner-msg">
+            <p>We would love to see you and your family here at Apostolic Faith Church.
+                Check out what's going on and then make plans to be with us!
+            </p>
+        </div>
+    </div>
+    <div class="mobile-banner">
+        <div class="mobile-banner-h-container">
+            <h2>EVENTS</h2>
+        </div>
+        <img src="../static/images/events.jpeg" class="mobile-offering-img">
+        <div class="banner-buffer"></div>
+    </div>
+<!--    <div class="buffer"></div>-->
+
+    <div class="event-container">
+      <h3 class="month">June</h3>      <!--  year-->
+        <hr class="divider">
+      <div class="event">
+        <div class="event-left">
+          <div class="event-date">
+            <div class="date">8</div>
+            <div class="day">Thursday</div>        <!--month-->
+          </div>
+        </div>
+
+        <div class="event-right">
+          <h3 class="event-title">EVENT</h3>
+
+          <div class="event-description">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus,
+            ratione.
+          </div>
+
+          <div class="event-timing">
+            <img src="../static/images/time.png" alt="" /> 10:00 am
+          </div>
+        </div>
+      </div>
+
+      <div class="event">
+        <div class="event-left">
+          <div class="event-date">
+            <div class="date">9</div>
+            <div class="day">Friday</div>
+          </div>
+        </div>
+
+        <div class="event-right">
+          <h3 class="event-title">EVENT</h3>
+
+          <div class="event-description">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus,
+            ratione.
+          </div>
+
+          <div class="event-timing">
+            <img src="../static/images/time.png" alt="" /> 10:45 am
+          </div>
+        </div>
+      </div>
+
+
+
+      <h3 class="month">July</h3>
+        <hr class="divider">
+        <div class="event">
+        <div class="event-left">
+          <div class="event-date">
+            <div class="date">7</div>
+            <div class="day">Wednesday</div>
+          </div>
+        </div>
+
+        <div class="event-right">
+          <h3 class="event-title">EVENT</h3>
+
+          <div class="event-description">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus,
+            ratione.
+          </div>
+
+          <div class="event-timing">
+            <img src="../static/images/time.png" alt="" /> 10:00 am
+          </div>
+        </div>
+      </div>
+
+      <div class="event">
+        <div class="event-left">
+          <div class="event-date">
+            <div class="date">9</div>
+            <div class="day">Friday</div>
+          </div>
+        </div>
+
+        <div class="event-right">
+          <h3 class="event-title">EVENT</h3>
+
+          <div class="event-description">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus,
+            ratione.
+          </div>
+
+          <div class="event-timing">
+            <img src="../static/images/time.png" alt="" /> 10:30 am
+          </div>
+        </div>
+      </div>
+
+      <div class="event">
+        <div class="event-left">
+          <div class="event-date">
+            <div class="date">12</div>
+            <div class="day">Monday</div>
+          </div>
+        </div>
+
+        <div class="event-right">
+          <h3 class="event-title">EVENT</h3>
+
+          <div class="event-description">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus,
+            ratione.
+          </div>
+
+          <div class="event-timing">
+            <img src="../static/images/time.png" alt="" /> 10:00 am
+          </div>
+        </div>
+      </div>
+
+      <div class="event">
+        <div class="event-left">
+          <div class="event-date">
+            <div class="date">20</div>
+            <div class="day">Tuesday</div>
+          </div>
+        </div>
+
+        <div class="event-right">
+          <h3 class="event-title">EVENT</h3>
+
+          <div class="event-description">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus,
+            ratione.
+          </div>
+
+          <div class="event-timing">
+            <img src="../static/images/time.png" alt="" /> 10:00 am
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+      <div class="footer-container">
+    <div class="column">
+      <h4>SERVICE TIMES</h4>
+      <p>SUNDAY WORSHIP SERVICE<br>IN-PERSON & VIRTUAL<br>11AM (CST)</p>
+      <p>BIBLE CLASS<br>IN-PERSON & VIRTUAL<br>7:00PM (CST)</p>
+    </div>
+
+        <div class="footer-divider"></div>
+
+        <div class="footer-links">
+                <a href="/" class="footer-logo-container"><img src="../static/images/logo.png" class="footer-logo"></a>
+            <div class="socials">
+                <a href="/" class="footer-logo-container"><img src="../static/images/fb.webp" class="social-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/twitter.webp" class="social-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/yt.webp" class="social-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/insta.webp" class="social-logo"></a>
+            </div>
+            <p>© 2023 Greater Bethlehem Temple</p>
+        </div>
+
+        <div class="footer-divider"></div>
+
+
+    <div class="column">
+      <h4>ADDRESS</h4>
+      <p>1505 ROBINSON STREET<br>JACKSON, MS 39203</p>
+      <p>601-354-2599 (Office)<br>GBTNEWS@GBTCHURCH.ORG</p>
+    </div>
+    <div class="footer-links-mobile">
+                <a href="/" class="footer-logo-container"><img src="../static/images/logo.png" class="footer-logo"></a>
+            <div class="socials">
+                <a href="/" class="footer-logo-container"><img src="../static/images/fb.webp" class="social-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/twitter.webp" class="social-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/yt.webp" class="social-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/insta.webp" class="social-logo"></a>
+            </div>
+            <p>© 2023 Greater Bethlehem Temple</p>
+    </div>
+  </div>
+
 </body>
 </html>
