--- a/website/templates/watch.html
+++ b/website/templates/watch.html
@@ -47,13 +47,11 @@
             </div>
     </div>
 
-        <div class="player-container">
-            <div id="player"></div>
 
-        </div>
     <div class="videoWrapper">
         <iframe
-            src="https://www.youtube.com/embed?listType=playlist&list=UUpNnNqSJXR_QzmAMM8DeVxQ">
+            src="https://www.youtube.com/embed/videoseries?listType=playlist&list=UUpNnNqSJXR_QzmAMM8DeVxQ"
+            frameborder="1" allowfullscreen>
         </iframe>
     </div>
 
