Events page -- DONE Watch page -- PASSES -- Needs Zoom info /Homepage -- FIXED /Give page -- DONE

--- a/website/templates/events.html
+++ b/website/templates/events.html
@@ -36,7 +36,7 @@
             <h2>EVENTS</h2>
         </div>
         <div class="banner-msg">
-            <p>We would love to see you and your family here at Apostolic Faith Church.
+            <p>We would love to see you and your family here at Greater Bethlehem Temple.
                 Check out what's going on and then make plans to be with us!
             </p>
         </div>
@@ -46,13 +46,74 @@
             <h2>EVENTS</h2>
         </div>
         <img src="../static/images/events.jpeg" class="mobile-offering-img">
-        <div class="banner-buffer"></div>
     </div>
-<!--    <div class="buffer"></div>-->
+            <div class="spacer"></div>
+
+    <div class="buffer"></div>
+
+
+    <div class="highlights-container">
+            <div class="grid-backdrop">
+                <h2>ANNOUNCEMENTS</h2>
+                <hr class="announce-divider">
+
+        <div class="grid">
+            <div>
+                <div class="image">
+                    <img src="../static/images/logo.png" class="image__img">
+		            <div class="image__overlay image__overlay--primary">
+			        <div class="image__title">Event Title</div>
+			        <p class="image__description">
+				        Event overview
+			        </p>
+		            </div>
+	            </div>
+            </div>
+            <div>
+                <div class="image">
+                    <img src="../static/images/logo.png" class="image__img">
+		            <div class="image__overlay image__overlay--primary">
+			        <div class="image__title">Event Title</div>
+			        <p class="image__description">
+				        Event overview
+			        </p>
+		            </div>
+	            </div>
+            </div>
+            <div>
+                <div class="image">
+                    <img src="../static/images/logo.png" class="image__img">
+		            <div class="image__overlay image__overlay--primary">
+			        <div class="image__title">Event Title</div>
+			        <p class="image__description">
+				        Event overview
+			        </p>
+		            </div>
+	            </div>
+
+            </div>
+            <div>
+                <div class="image">
+                    <img src="../static/images/logo.png" class="image__img">
+		            <div class="image__overlay image__overlay--primary">
+			        <div class="image__title">Event Title</div>
+			        <p class="image__description">
+                        Event overview</p>
+		            </div>
+	            </div>
+            </div>
+
+        </div>
+        <div class="more-grid-backdrop">
+
+        </div>
+    </div>
+    </div>
+
 
     <div class="event-container">
       <h3 class="month">June</h3>      <!--  year-->
-        <hr class="divider">
+        <hr class="month-divider">
       <div class="event">
         <div class="event-left">
           <div class="event-date">
@@ -100,7 +161,7 @@
 
 
       <h3 class="month">July</h3>
-        <hr class="divider">
+        <hr class="month-divider">
         <div class="event">
         <div class="event-left">
           <div class="event-date">
