--- a/website/static/css/events.css
+++ b/website/static/css/events.css
@@ -4,6 +4,7 @@
     --burgundy: rgb(122,59,59);     /*(86,0,34)*/
     --grey: rgb(230, 223, 223);
     --grey1: rgb(174, 158,158);
+    --burgundy-overlay: rgba(122,59,59,0.5);
 
 }
 
@@ -135,15 +136,28 @@ nav a:hover{
     top: 80px;
     width: 100%;
     height: 150px;
-    background: rgba(122,59,59,0.5);
+    background: rgba(122,59,59,0.85);
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.spacer{
+    height: 40px;
 }
 
 .mobile-banner-h-container{
     position: absolute;
     left: 0px;
     top: 0px;
+    width: 100%
 }
-
+.mobile-banner-h-container h2{
+    color: white;
+    font-size: 60px;
+    font-weight: 300;
+}
 .mobile-offering-img{
     position: relative;
     z-index: -1;
@@ -210,9 +224,9 @@ h5{
 }
 
 .buffer{
-        display: none;
 
 }
+
 
 
 .banner-buffer{
@@ -292,6 +306,15 @@ h4{
               margin: 0 auto;
               margin-top: 80px;
             }
+
+        .month{
+              font-size: 40px;
+              font-weight: 300;
+              text-align: center;
+              margin: 0px;
+              padding: 0px;
+              margin-top: 40px;
+        }
 
             .event-container h3.day {
               font-size: 40px;
@@ -379,10 +402,10 @@ h4{
                 padding: 10px 0;
               }
             }
-            .divider {
+            .month-divider {
                 width: 319px;
                 position: relative;
-                top: -30px;
+                top: 5px;
                 padding: 0px;
                 margin-top: 0px;
                 margin-bottom: 0px;
@@ -391,8 +414,70 @@ h4{
             }
 
 
+.grid-backdrop{
+    background: var(--burgundy);
+    display: grid;
+    place-items: center;
 
+}
+.more-grid-backdrop{
+    background: var(--burgundy);
+    height: 80px;
+}
+.grid{
+    display: grid;
+    grid-template-columns: 319px;
+    grid-template-rows: 311px;
+    grid-row-gap: 50px;
+    grid-column-gap: 25px;
+    margin-left: auto;
+    margin-right: auto;
+    }
+
+
+.grid > div{
+     box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, .2);
+     padding: 10px;
+     background: white;
+     height: 311px;
+     }
+
+.placeholder-img{
+
+    width: 319px;
+    height: 311px;
+    border-style: solid;
+
+}
+
+.card-divider{
+    width: 319px;
+    position: relative;
+    top: 20px;
+    padding: 0px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    border-top: 4px solid var(--burgundy);
+    border-radius: 5px;
+}
+
+.highlights-container{
+    display: none;
+}
 @media screen and (min-width: 820px){
+
+        .highlights-container{
+            all: unset;
+        }
+
+        .highlights-container h2{
+            color: black;
+            font-size: 48px;
+            font-weight: 400;
+            text-align: center;
+            padding-left: 38px;
+            padding-right: 38px;
+        }
 
         header{
             position: static;
@@ -675,6 +760,103 @@ h4{
         .footer-links-mobile{
             display: none;
         }
+
+        .grid-backdrop{
+            background: var(--grey);
+            display: grid;
+            place-items: center;
+
+        }
+
+        .grid{
+            display: grid;
+            margin-top: 0px;
+            grid-row-gap: 50px;
+            grid-column-gap: 25px;
+            grid-template-columns: repeat(2, 319px);
+
+        }
+
+        .image {
+	position: relative;
+	width: 319px;
+	height: 311px;
+}
+
+.image__img {
+	display: block;
+	width: 100%;
+}
+
+.image__overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.6);
+	color: #ffffff;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	opacity: 0;
+	transition: opacity 0.25s;
+}
+
+.image__overlay--blur {
+	backdrop-filter: blur(5px);
+}
+
+.image__overlay--primary {
+	background: var(--burgundy);
+}
+
+.image__overlay>* {
+	transform: translateY(20px);
+	transition: transform 0.25s;
+}
+
+.image__overlay:hover {
+	opacity: 1;
+}
+
+.image__overlay:hover>* {
+	transform: translateY(0);
+}
+
+.image__title {
+	font-size: 2em;
+	font-weight: bold;
+}
+
+.image__description {
+	font-size: 1.25em;
+	margin-top: 0.25em;
+	display: flex;
+	text-align: center;
+}
+
+        .grid > div{
+            padding: 0px;
+            background: white;
+            margin-top: 20px
+        }
+        @media screen and (min-width: 1350px){
+            .grid{
+                display: grid;
+                grid-template-columns: repeat(4, 319px);
+                }
+
+
+
+
+        }
+
+
+
+
+
         .event-container {
               font-family: "Roboto", sans-serif;
               max-width: 800px;
@@ -767,16 +949,28 @@ h4{
                 padding: 10px 0;
               }
             }
-            .divider {
+            .month-divider {
                 width: 319px;
                 position: relative;
-                top: -30px;
+                top: 5px;
                 padding: 0px;
                 margin-top: 0px;
                 margin-bottom: 0px;
                 border-top: 4px solid var(--burgundy);
                 border-radius: 5px;
             }
-
+            .announce-divider {
+                width: 200px;
+                position: relative;
+                top: -20px;
+                padding: 0px;
+                margin-top: 0px;
+                margin-bottom: 0px;
+                border-top: 4px solid var(--burgundy);
+                border-radius: 5px;
+            }
+            .spacer{
+                display: none;
+            }
 }
 
