--- a/website/static/css/give.css
+++ b/website/static/css/give.css
@@ -634,7 +634,7 @@ h4{
             display: inline-block;
             margin-right: 0px;
             margin-left: 0px;
-            background: rgba(122,59,59,.5);
+            background: var(--burgundy);
             width: 300px;
 
         }
