--- a/website/templates/events.html
+++ b/website/templates/events.html
@@ -31,7 +31,7 @@
 
 
     <div class="banner">
-        <img src="../static/images/events.jpeg" class="event-img">
+        <img src="../static/images/table.jpg" class="event-img">
         <div class="banner-h-container">
             <h2>EVENTS</h2>
         </div>
