--- a/website/templates/give.html
+++ b/website/templates/give.html
@@ -27,12 +27,12 @@
     </header>
 
     <div class="banner">
-        <img src="../static/images/giving.jpg" class="giving-img">
+        <img src="../static/images/basket.jpg" class="giving-img">
         <div class="banner-h-container">
             <h2>GIVING TO BUILD GOD'S KINGDOM</h2>
         </div>
         <div class="banner-msg">
-            <p>When you support the ministry of Apostolic Faith Church, you are making an impact locally
+            <p>When you support the ministry of Greater Bethlehem Temple, you are making an impact locally
                 and internationally. Thank you for your donation, it is seed sown in good soil!
             </p>
         </div>
@@ -84,7 +84,9 @@
     <div class="grid-backdrop">
         <div class="grid">
             <div>
-                <h2>Aberdeen Giving</h2>
+                <a style="text-decoration: none;color:black;" href="https://www.shelbygiving.com/App/Form/8ca3fc26-2266-44f4-a627-2d40c3f8ebf7">
+                    <h2>Aberdeen Giving</h2>
+                </a>
                 <hr class="card-divider">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
                         ut rhoncus mauris eleifend at.</p>
@@ -93,7 +95,9 @@
                 </a>
             </div>
             <div>
-                <h2>Daycare & AfterSchool Payments</h2>
+                <a style="text-decoration: none;color:black;" href="https://www.shelbygiving.com/App/Form/884a4886-2c97-4842-a3d6-f3c9fe16d207">
+                    <h2>Daycare & AfterSchool Payments</h2>
+                </a>
                 <hr class="card-divider">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
                         ut rhoncus mauris eleifend at.</p>
@@ -102,7 +106,9 @@
                     </a>
             </div>
             <div>
-                <h2>Landmark Temple Giving</h2>
+                <a style="text-decoration: none;color:black;" href="https://www.shelbygiving.com/App/Form/6944dcd3-125b-4190-9796-52dcc1ef494a">
+                    <h2>Landmark Temple Giving</h2>
+                </a>
                 <hr class="card-divider">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
                         ut rhoncus mauris eleifend at.</p>
@@ -111,21 +117,25 @@
                     </a>
             </div>
             <div>
-                <h2>Fellowship Hall Giving</h2>
+                <a style="text-decoration: none;color:black;" href="https://www.shelbygiving.com/App/Form/a8603902-ecc5-42a9-9016-10debbe36444">
+                    <h2>Fellowship Hall Giving</h2>
+                </a>
                 <hr class="card-divider">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
                         ut rhoncus mauris eleifend at.</p>
                 <a href="https://www.shelbygiving.com/App/Form/a8603902-ecc5-42a9-9016-10debbe36444">
-                        <img src="../static/images/food.jpeg" class="placeholder-img">
+                        <img src="../static/images/table2.jpg" class="placeholder-img">
                     </a>
             </div>
             <div>
-                <h2>Family Life Center</h2>
+                <a style="text-decoration: none;color:black;" href="https://www.shelbygiving.com/App/Form/1074db63-a5eb-4e1a-8fb8-e138fc20999c">
+                    <h2>Family Life Center</h2>
+                </a>
                 <hr class="card-divider">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
                         ut rhoncus mauris eleifend at.</p>
                 <a href="https://www.shelbygiving.com/App/Form/1074db63-a5eb-4e1a-8fb8-e138fc20999c">
-                        <img src="../static/images/flc.jpg" class="placeholder-img">
+                        <img src="../static/images/rainbow.jpg" class="placeholder-img">
                     </a>
             </div>
         </div>
