--- a/website/templates/homepage.html
+++ b/website/templates/homepage.html
@@ -38,15 +38,15 @@
             <div class="floating-buttons">
                 <ul>
                     <li><a href="#">In-Person Service</a></li>
-                    <li><a href="#">Watch Online</a></li>
+                    <li><a href="/watch">Watch Online</a></li>
                 </ul>
             </div>
         </div>
         <div class ="bottom-menu-container">
             <div class="bottom-menu">
                 <ul>
-                    <li><a href="#">Give Today</a></li>
-                    <li><a href="#">Events</a></li>
+                    <li><a href="/give">Give Today</a></li>
+                    <li><a href="/events">Events</a></li>
                 </ul>
             </div>
         </div>
@@ -129,14 +129,14 @@
         </div>
     </div>
     <div class="connect-with-us-container">
-        <img src="../static/images/join-us.jpg">
+        <img src="../static/images/wide.jpg">
         <div class="connect-with-us">
             <h3>CONNECT WITH US THROUGH FAITH AND LOVE</h3>
             <hr class="connect-with-us-divider">
             <p>To join in membership at Greater Bethlehem Temple means to connect in relationship.
                 Your membership is a submission to a covenant with God and His people that is
                 inclusive, compassionate and honorable.</p>
-            <li><a href="#">Learn About Membership</a></li>
+            <li><a href="/connect">Learn About Membership</a></li>
 
         </div>
     </div>
