--- a/website/templates/watch.html
+++ b/website/templates/watch.html
@@ -28,7 +28,7 @@
     </header>
 
     <div class="banner">
-        <img src="../static/images/zoom.jpg" class="zoom-img">
+        <img src="../static/images/temple.jpg" class="banner-img">
         <div class="splash-container">
             <img src="../static/images/logo.png" class="splash-img">
         </div>
