--- a/website/templates/watch.html
+++ b/website/templates/watch.html
@@ -70,9 +70,14 @@
         <div class="footer-links">
                 <a href="/" class="footer-logo-container"><img src="../static/images/logo.png" class="footer-logo"></a>
             <div class="socials">
-                <a href="/" class="footer-logo-container"><img src="../static/images/fb.webp" class="social-logo"></a>
-                <a href="/" class="footer-logo-container"><img src="../static/images/twitter.webp" class="social-logo"></a>
-                <a href="/" class="footer-logo-container"><img src="../static/images/yt.webp" class="social-logo"></a>
+                <a href="https://www.facebook.com/GBTchurch"
+                   class="footer-logo-container"><img src="../static/images/fb.webp" class="social-logo"></a>
+
+                <a href="https://twitter.com/GBTnews"
+                   class="footer-logo-container"><img src="../static/images/twitter.webp" class="social-logo"></a>
+
+                <a href="https://www.youtube.com/@GBTnews"
+                   class="footer-logo-container"><img src="../static/images/yt.webp" class="social-logo"></a>
                 <a href="/" class="footer-logo-container"><img src="../static/images/insta.webp" class="social-logo"></a>
             </div>
             <p>© 2023 Greater Bethlehem Temple</p>
