--- a/website/templates/events.html
+++ b/website/templates/events.html
@@ -45,7 +45,7 @@
         <div class="mobile-banner-h-container">
             <h2>EVENTS</h2>
         </div>
-        <img src="../static/images/events.jpeg" class="mobile-offering-img">
+        <img src="../static/images/table.jpg" class="mobile-offering-img">
     </div>
             <div class="spacer"></div>
 
@@ -264,7 +264,7 @@
         <div class="footer-divider"></div>
 
         <div class="footer-links">
-                <a href="/" class="footer-logo-container"><img src="../static/images/logo.png" class="footer-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/white_logo.png" class="footer-logo"></a>
             <div class="socials">
                 <a href="https://www.facebook.com/GBTchurch"
                    class="footer-logo-container"><img src="../static/images/fb.webp" class="social-logo"></a>
