--- a/website/templates/homepage.html
+++ b/website/templates/homepage.html
@@ -54,73 +54,81 @@
     <div class="grid-backdrop">
         <div class="grid">
             <div>
-                <h2>TITLE</h2>
+                <a style="text-decoration: none;color:black;" href="/"><h2>TITLE</h2></a>
                 <hr class="card-divider">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
                         ut rhoncus mauris eleifend at.</p>
-                <img src="../static/images/placeholder-image.png" class="placeholder-img">
+                <a style="text-decoration: none; color: black;" href="/">
+                    <img src="../static/images/placeholder-image.png" class="placeholder-img"></a>
             </div>
             <div>
-                <h2>TITLE</h2>
+                <a style="text-decoration: none;color:black;" href="/"><h2>TITLE</h2></a>
                 <hr class="card-divider">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
                         ut rhoncus mauris eleifend at.</p>
-                <img src="../static/images/placeholder-image.png" class="placeholder-img">
-            </div>
+                    <a style="text-decoration: none; color: black;" href="/">
+                        <img src="../static/images/placeholder-image.png" class="placeholder-img"></a>            </div>
             <div>
-                <h2>TITLE</h2>
+                <a style="text-decoration: none;color:black;" href="/"><h2>TITLE</h2></a>
                 <hr class="card-divider">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
                         ut rhoncus mauris eleifend at.</p>
-                <img src="../static/images/placeholder-image.png" class="placeholder-img">
+                <a style="text-decoration: none; color: black;" href="/">
+                    <img src="../static/images/placeholder-image.png" class="placeholder-img"></a>
 
             </div>
             <div>
-                <h2>TITLE</h2>
+                <a style="text-decoration: none;color:black;" href="/"><h2>TITLE</h2></a>
                 <hr class="card-divider">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
                         ut rhoncus mauris eleifend at.</p>
-                <img src="../static/images/placeholder-image.png" class="placeholder-img">
+                <a style="text-decoration: none; color: black;" href="/">
+                    <img src="../static/images/placeholder-image.png" class="placeholder-img"></a>
 
             </div>
             <div>
-                <h2>TITLE</h2>
+                <a style="text-decoration: none;color:black;" href="/"><h2>TITLE</h2></a>
                 <hr class="card-divider">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
                         ut rhoncus mauris eleifend at.</p>
-                <img src="../static/images/placeholder-image.png" class="placeholder-img">
+                <a style="text-decoration: none; color: black;" href="/">
+                    <img src="../static/images/placeholder-image.png" class="placeholder-img"></a>
 
             </div>
             <div>
-                <h2>TITLE</h2>
+                <a style="text-decoration: none;color:black;" href="/"><h2>TITLE</h2></a>
                 <hr class="card-divider">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
                         ut rhoncus mauris eleifend at.</p>
-                <img src="../static/images/placeholder-image.png" class="placeholder-img">
+                <a style="text-decoration: none; color: black;" href="/">
+                    <img src="../static/images/placeholder-image.png" class="placeholder-img"></a>
 
             </div>
             <div>
-                <h2>TITLE</h2>
+                <a style="text-decoration: none;color:black;" href="/"><h2>TITLE</h2></a>
                 <hr class="card-divider">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
                         ut rhoncus mauris eleifend at.</p>
-                <img src="../static/images/placeholder-image.png" class="placeholder-img">
+                <a style="text-decoration: none; color: black;" href="/">
+                    <img src="../static/images/placeholder-image.png" class="placeholder-img"></a>
 
             </div>
             <div>
-                <h2>TITLE</h2>
+                <a style="text-decoration: none;color:black;" href="/"><h2>TITLE</h2></a>
                 <hr class="card-divider">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
                         ut rhoncus mauris eleifend at.</p>
-                <img src="../static/images/placeholder-image.png" class="placeholder-img">
+                <a style="text-decoration: none; color: black;" href="/">
+                    <img src="../static/images/placeholder-image.png" class="placeholder-img"></a>
 
             </div>
             <div>
-                <h2>TITLE</h2>
+                <a style="text-decoration: none;color:black;" href="/"><h2>TITLE</h2></a>
                 <hr class="card-divider">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
                         ut rhoncus mauris eleifend at.</p>
-                <img src="../static/images/placeholder-image.png" class="placeholder-img">
+                <a style="text-decoration: none; color: black;" href="/">
+                    <img src="../static/images/placeholder-image.png" class="placeholder-img"></a>
 
             </div>
         </div>
@@ -153,7 +161,7 @@
         <div class="footer-divider"></div>
 
         <div class="footer-links">
-                <a href="/" class="footer-logo-container"><img src="../static/images/logo.png" class="footer-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/white_logo.png" class="footer-logo"></a>
             <div class="socials">
                 <a href="https://www.facebook.com/GBTchurch"
                    class="footer-logo-container"><img src="../static/images/fb.webp" class="social-logo"></a>
