--- a/website/templates/watch.html
+++ b/website/templates/watch.html
@@ -40,9 +40,12 @@
     <div class="watch-logos">
             <h5>Subscribe to GBTnews and Connect with us on Facebook</h5>
             <div class="watch-socials">
-                <a href="/" class="watch-logo-container"><img src="../static/images/fb.png" class="watch-logo"></a>
-                <a href="/" class="watch-logo-container"><img src="../static/images/twitt.png" class="watch-logo"></a>
-                <a href="/" class="watch-logo-container"><img src="../static/images/yt.png" class="watch-logo"></a>
+                <a href="https://www.facebook.com/GBTchurch" class="watch-logo-container">
+                    <img src="../static/images/fb.png" class="watch-logo"></a>
+                <a href="https://twitter.com/GBTnews" class="watch-logo-container">
+                    <img src="../static/images/twitt.png" class="watch-logo"></a>
+                <a href="https://www.youtube.com/@GBTnews/streams" class="watch-logo-container">
+                    <img src="../static/images/yt.png" class="watch-logo"></a>
                 <a href="/" class="watch-logo-container"><img src="../static/images/insta.png" class="watch-logo"></a>
             </div>
     </div>
@@ -68,7 +71,7 @@
         <div class="footer-divider"></div>
 
         <div class="footer-links">
-                <a href="/" class="footer-logo-container"><img src="../static/images/logo.png" class="footer-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/white_logo.png" class="footer-logo"></a>
             <div class="socials">
                 <a href="https://www.facebook.com/GBTchurch"
                    class="footer-logo-container"><img src="../static/images/fb.webp" class="social-logo"></a>
