--- a/website/static/css/events.css
+++ b/website/static/css/events.css
@@ -136,7 +136,7 @@ nav a:hover{
     top: 80px;
     width: 100%;
     height: 150px;
-    background: rgba(122,59,59,0.85);
+    background: var(--burgundy);
     display: flex;
     text-align: center;
     align-items: center;
@@ -263,7 +263,7 @@ h4{
 }
 
 .footer-logo{
-    width: 40%;
+    width: 20%;
 
 }
 h4{
@@ -440,6 +440,7 @@ h4{
      padding: 10px;
      background: white;
      height: 311px;
+     border-radius: 20px;
      }
 
 .placeholder-img{
@@ -677,8 +678,8 @@ h4{
             align-items: center;
             padding: 0px;
             width: auto;
-            height: 120px;
-            margin: 0px;
+            height: 110px;
+            margin: 25px;
         }
 
         .column {
@@ -774,13 +775,13 @@ h4{
             grid-row-gap: 50px;
             grid-column-gap: 25px;
             grid-template-columns: repeat(2, 319px);
-
         }
 
         .image {
 	position: relative;
 	width: 319px;
 	height: 311px;
+	border-radius: 20px;
 }
 
 .image__img {
@@ -802,6 +803,8 @@ h4{
 	justify-content: center;
 	opacity: 0;
 	transition: opacity 0.25s;
+	border-radius: 20px;
+
 }
 
 .image__overlay--blur {
@@ -810,6 +813,8 @@ h4{
 
 .image__overlay--primary {
 	background: var(--burgundy);
+	border-radius: 20px;
+
 }
 
 .image__overlay>* {
@@ -841,6 +846,7 @@ h4{
             padding: 0px;
             background: white;
             margin-top: 20px
+
         }
         @media screen and (min-width: 1350px){
             .grid{
