--- a/website/static/css/homepage.css
+++ b/website/static/css/homepage.css
@@ -2,6 +2,9 @@
     --nav-color: black;
     --nav-color2: rgb(223,213,213);
     --burgundy: rgb(122,59,59);     /*(86,0,34)*/
+    --grey: rgb(230, 223, 223);
+    --grey1: rgb(174, 158,158);
+    --burgundy-overlay: rgba(122,59,59,0.5);
 
 }
 
@@ -202,6 +205,7 @@ nav a:hover{
     margin-bottom: 30px;
     background: rgba(122,59,59,.5);
     width: 200px;
+    border-radius: 99px;
 
     }
 
@@ -218,6 +222,7 @@ nav a:hover{
 .floating-buttons-container li:hover {
     background: rgb(47,46,46);
     transition: background-color 0.5s ease; /* Change duration value to make the transition slower or faster */
+    border-radius: 99px;
     }
 
 .splash-image-container{
@@ -340,7 +345,7 @@ h4{
 }
 
 .footer-logo{
-    width: 40%;
+    width: 20%;
 
 }
 h4{
@@ -565,6 +570,7 @@ h4{
             margin-left: 0px;
             background: var(--burgundy);
             width: 335px;
+            border-radius: 99px;
 
         }
 
@@ -755,8 +761,8 @@ h4{
             align-items: center;
             padding: 0px;
             width: auto;
-            height: 120px;
-            margin: 0px;
+            height: 110px;
+            margin: 25px;
         }
 
         .column {
