--- a/website/templates/template.html
+++ b/website/templates/template.html
@@ -49,7 +49,7 @@
         <div class="footer-divider"></div>
 
         <div class="footer-links">
-                <a href="/" class="footer-logo-container"><img src="../static/images/logo.png" class="footer-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/white_logo.png" class="footer-logo"></a>
             <div class="socials">
                 <a href="https://www.facebook.com/GBTchurch"
                    class="footer-logo-container"><img src="../static/images/fb.webp" class="social-logo"></a>
