--- a/website/static/css/homepage.css
+++ b/website/static/css/homepage.css
@@ -270,6 +270,8 @@ nav a:hover{
      padding: 10px;
      background: white;
      height: 527px;
+     margin-top: 25px;
+     border-radius: 10px;
      }
 
 .placeholder-img{
@@ -628,6 +630,7 @@ h4{
             padding: 10px;
             background: white;
             margin-top: 20px
+            border-radius: 10px;
         }
         @media screen and (min-width: 1150px){
             .grid{
